--- a/main.css
+++ b/main.css
@@ -46,7 +46,7 @@ body{
     padding: 2%;
     float: left;
     font-style: italic;
-    font-family: 'domine', Georgia, 'Times New Roman', Times, serif;;
+    font-family: 'domine', Georgia, 'Times New Roman', Times, serif;
     font-size: 1.3em;
     color: #46333e;
     font-weight: bold;
@@ -129,16 +129,19 @@ body{
 }
 .depoimentos2 p{
     width: 80%;
-    color: #fff;
+    color: #ddd;
     text-align: justify;
     font-family: 'domine', Georgia, 'Times New Roman', Times, serif;
     font-size: 1.2em;
     padding: 2%;
     margin: auto;
 }
-.depoimentos2 iframe{
-    background: #fff;
-    margin-left: 11%;
+.depoimentos2 p a{
+    text-decoration: none;
+    color: #91CE9C;
+}
+.depoimentos2 p i{
+    color: #91CE9C;
 }
 /*rodapé*/
 .rodape{
@@ -170,16 +173,12 @@ body{
 /*Para mídias com até 768px*/
 @media screen and (max-width: 768px){
     /*primeiro containter*/
-    .primeira{
-        height: 65vh;
-    }
     .tituloEsubtitulo{
-        width: 60%;
+        height: 15%;
         padding-left: 5%;
         padding-top: 5%;
     }
     .introducao{
-        width: 50%;
         padding-left: 5%;
         font-size: 1.3em;
     }
@@ -217,9 +216,6 @@ body{
         width: 100%;
         padding-bottom: 5%;
     }
-    .depoimentos2 iframe{
-        margin-left: 10%;
-    }
     /*rodapé*/
     /*nada*/
 }
@@ -230,7 +226,7 @@ body{
         width: 70%;
     }
     .introducao{
-        width: 45%;
+        width: 55%;
         padding-left: 5%;
         font-size: 1.1em;
     }
